--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <title>Sign up</title>
 </head>
 <body>
+    <main>
+        <div>
+            <h1>Sign up</h1>
+            <footer>
+                <a href="#"Privacy policy></a>
+                <span>&amp;</span>
+                <a href="#"Terms of service></a>
+            </footer>
+        </div>
+    <div>
+        <div>x</div>
+        <form>
+            <div>
+                <label for="">Username</label>
+                <input id="text">
+            </div>
+            <div>
+                <label for="">E-mail</label>
+                <input id="text">
+            </div>
+            <div>
+                <label for="">Password</label>
+                <input id="text">
+            </div>
+            <div>
+                <div>Get started</div>
+            </div>
+            </form>
+            </div>
+    </main>
     
 </body>
 </html>
