--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
 </head>
+
 <body>
+    Sign up content
     <main>
         <div>
             <h1>Sign up</h1>
             <footer>
                 <a href="#"Privacy policy></a>
                 <span>&amp;</span>
-                <a href="#"Terms of service></a>
+                <a href="#">terms of service></a>
             </footer>
         </div>
     <div>
         <div>x</div>
         <form>
             <div>
-                <label for="">Username</label>
-                <input id="text">
+                <label for="username">Username</label>
+                <input id="username" type="text">
             </div>
             <div>
-                <label for="">E-mail</label>
-                <input id="text">
+                <label for="email">E-mail</label>
+                <input id="email" type="email">
             </div>
             <div>
-                <label for="">Password</label>
-                <input id="text">
+                <label for="pass">Password</label>
+                <input id="pass" type="password">
+            </div>
+            <div>
+                <label for="repass">Repeat password</label>
+                <input id="repass" type="password">
             </div>
             <div>
                 <div>Get started</div>
+                <span>or</span>
+                <a href="#">Sign in</a>
             </div>
-            </form>
-            </div>
+        </form>
+        </div>
     </main>
     
 </body>
