--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div>
             <h1>Sign up</h1>
             <footer>
-                <a href="#"Privacy policy></a>
-                <span>&amp;</span>
+                <a href="#">Privacy policy></a>
+                <span>&AMP;;</span>
                 <a href="#">terms of service></a>
             </footer>
         </div>
