--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div>
                 <div>Get started</div>
                 <span>or</span>
-                <a href="#">Sign in</a>
+                <a href="#">Sign inn</a>
             </div>
         </form>
         </div>
