--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 
 <body>
-    Sign up content
     <main>
         <div>
             <h1>Sign up</h1>
             <footer>
                 <a href="#">Privacy policy></a>
-                <span>&AMP;;</span>
+                <span>&amp;</span>
                 <a href="#">terms of service></a>
             </footer>
         </div>
@@ -23,24 +22,24 @@
         <form>
             <div>
                 <label for="username">Username</label>
-                <input id="username" type="text">
+                <input id="username" type="text" placeholder="Username">
             </div>
             <div>
                 <label for="email">E-mail</label>
-                <input id="email" type="email">
+                <input id="email" type="email" placeholder="Email">
             </div>
             <div>
                 <label for="pass">Password</label>
-                <input id="pass" type="password">
+                <input id="pass" type="password" placeholder="password">
             </div>
             <div>
                 <label for="repass">Repeat password</label>
-                <input id="repass" type="password">
+                <input id="repass" type="password" placeholder="password">
             </div>
             <div>
                 <div>Get started</div>
                 <span>or</span>
-                <a href="#">Sign inn</a>
+                <a href="#">Sign in</a>
             </div>
         </form>
         </div>
