--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <label class="label" for="repass">Repeat password</label>
                     <input class="input" id="repass" type="password" placeholder="password">
                 </div>
-                <div class="form-row">
+                <div class="form-row margin-bottom-zero">
                     <div class="btn">Get started</div>
                     <span class="text">or</span>
                     <a class="link" href="#">Sign in</a>
